CLXP-163 fix menu of BulletPointMenuButton visible when add Tooltip for ButtonLinkIcon (#2894)
* CLXP-163 fix meun of BulletPointMenuButton visible when add Tooltip for ButtonLinkIcon

* update menu visibility logic

* resolve commets

---------

--- a/packages/@coorpacademy-components/src/molecule/bullet-point-menu-button/style.css
+++ b/packages/@coorpacademy-components/src/molecule/bullet-point-menu-button/style.css
@@ -29,30 +29,17 @@
   border-radius: 7px;
   overflow: hidden;
   background-color: cm_grey_100;
-}
-
-/* Fade-in - Fade-out, does target button class but bulletPointMenu only */
-button + .bulletPointMenu {
-  /* fade out combo */
   visibility: hidden;
   opacity:0;
   transition:visibility 0.5s ease,opacity 0.5s ease;
 }
 
-/* Does target button class but bulletPointMenu only */
-button:focus + .bulletPointMenu {
+.visible {
   /* fade in combo */
   max-height: max-content;
-  visibility:visible;
+  visibility: visible;
   opacity:1;
 }
-
-/* 
-  Recover - unset pointer-events,
-  to be able to click on the button when the menu is open to close it
-*/
-.bulletPointWrapper > button:focus { pointer-events: none; }
-.bulletPointWrapper > button:not(:focus) { pointer-events: auto; }
 
 /* 
   bulk theme
